@@ -145,7 +145,7 @@ setGeneric("a.K", function(x = NULL) standardGeneric("a.K"))
 setGeneric("a.y0", function(x = NULL) standardGeneric("a.y0"))
 setGeneric("a.ar", function(x = NULL) standardGeneric("a.ar"))
 setGeneric("a.Restraints", function(x = NULL) standardGeneric("a.Restraints"))
-setGeneric("a.summary", function(x = NULL) standardGeneric("a.summary"))
+setGeneric("a.summary", function(x = NULL, col.name = character()) standardGeneric("a.summary"))
 setGeneric("a.pos", function(x = NULL) standardGeneric("a.pos"))
 setGeneric("a.opt.c", function(x = NULL) standardGeneric("a.opt.c"))
 setGeneric("a.opt.IC", function(x = NULL) standardGeneric("a.opt.IC"))
@@ -171,7 +171,7 @@ setGeneric("a.Theta.cv", function(x = NULL) standardGeneric("a.Theta.cv"))
 setGeneric("a.Zp", function(x = NULL, s = expression(c)) standardGeneric("a.Zp"))
 setGeneric("a.p", function(x = NULL, s = expression(c)) standardGeneric("a.p"))
 setGeneric("a.pi", function(x = NULL, s = expression(c)) standardGeneric("a.pi"))
-setGeneric("a.P", function(x = NULL) standardGeneric("a.P"))
+setGeneric("a.P", function(x = NULL, s = expression(c)) standardGeneric("a.P"))
 setGeneric("a.tau", function(x = NULL, s = expression(c)) standardGeneric("a.tau"))
 setGeneric("a.from", function(x = NULL) standardGeneric("a.from"))
 setGeneric("a.to", function(x = NULL) standardGeneric("a.to"))
