@@ -24,6 +24,8 @@ function(x,
   
   Dataset <- x@Dataset[[which(names(x@Dataset) == x@summary[pos, "Dataset"])]]
   
+  colnames <- colnames(Dataset)
+  
   d <- ncol(Dataset); dini <- d; variables <- eval(variables)
   n <- nrow(Dataset)
   
@@ -73,7 +75,12 @@ function(x,
   
   output <- as.data.frame(cbind(Dataset, F), stringsAsFactors = FALSE)
 
-  colnames(output) <- c(paste("x", if (dini > 1) variables else "", sep = ""), "F")  
+  if (is.null(colnames)) {
+    colnames(output) <- c(paste("x", if (dini > 1) variables else "", sep = ""), "F")
+  }
+  else {
+    colnames(output) <- c(colnames[variables], "F")   
+  }    
 
   options(digits = digits)
 
@@ -107,6 +114,8 @@ function(x,
   }
   
   Dataset <- x@Dataset[[which(names(x@Dataset) == x@summary[pos, "Dataset"])]]
+  
+  colnames <- colnames(Dataset)
   
   d <- ncol(Dataset); dini <- d; variables <- eval(variables)
   n <- nrow(Dataset)
@@ -157,7 +166,12 @@ function(x,
   
   output <- as.data.frame(cbind(Dataset, F), stringsAsFactors = FALSE)
 
-  colnames(output) <- c(paste("x", if (dini > 1) variables else "", sep = ""), "F")  
+  if (is.null(colnames)) {
+    colnames(output) <- c(paste("x", if (dini > 1) variables else "", sep = ""), "F")
+  }
+  else {
+    colnames(output) <- c(colnames[variables], "F")   
+  }  
 
   options(digits = digits)
 
