@@ -140,13 +140,13 @@ for (j in 1:length(n)) {
   RootN <- as.integer(2 * n[j]^0.5) # Maximum v follows the RootN rule.
 
   for (i in 1:15) {
-    normalest[[i, j]] <- REBMIX(Dataset = normal[[i, j]]@Dataset,
+    normalest[[i, j]] <- REBMIX(Dataset = a.Dataset(normal[[i, j]]),
       Preprocessing = "histogram", cmax = 20, Criterion = "BIC",
       pdf = "normal", K = Sturges:Log10, y0 = 0.0, 
-      ymin = normal[[i, j]]@ymin, ymax = normal[[i, j]]@ymax)
+      ymin = a.ymin(normal[[i, j]]), ymax = a.ymax(normal[[i, j]]))
 
-    table[i, j * 2 - 1] <- mean(as.numeric(normalest[[i, j]]@summary$c))  
-    table[i, j * 2] <- sd(as.numeric(normalest[[i, j]]@summary$c))
+    table[i, j * 2 - 1] <- mean(a.summary(normalest[[i, j]], "c"))  
+    table[i, j * 2] <- sd(a.summary(normalest[[i, j]], "c"))
   }
 }
 
